--- a/app/assets/stylesheets/pages/events.scss
+++ b/app/assets/stylesheets/pages/events.scss
@@ -16,6 +16,11 @@
    border-radius: 10px;
    position: relative;
 
+   @media screen and (max-width: 1350px) {
+      width: 400px;
+   }
+
+
 }
 
 .event-date-container{
