--- a/app/views/layouts/tabs/tab_links/_home_inactive.html.erb
+++ b/app/views/layouts/tabs/tab_links/_home_inactive.html.erb
@@ -1,3 +1,5 @@
-<%= link_to user_path(current_user) do %>
-   <i class='fa-solid fa-home'></i> Accueil  
-<% end%>
+<div class="item-nav">
+   <i class='fa-solid fa-home'></i>  
+   <%= link_to 'Accueil', user_path(current_user)  %>
+
+</div>
