sign_up media query

--- a/app/assets/stylesheets/pages/sign_up_log_in-page/sign_up.css
+++ b/app/assets/stylesheets/pages/sign_up_log_in-page/sign_up.css
@@ -23,4 +23,16 @@
 .modify-email {
   margin-bottom: 45px;
 }
+
+@media screen and (max-width: 1200px) {
+    .signup-container{
+      flex-direction: column !important;
+      position: relative !important;
+    }
+
+    .right-image{
+      max-height: 200px;
+    }
+
+}
 /*# sourceMappingURL=sign_up.css.map */
