--- a/app/assets/stylesheets/atoms/navbar.scss
+++ b/app/assets/stylesheets/atoms/navbar.scss
@@ -10,6 +10,7 @@
    top: 0px;
    left: 0px;
    transition: all 0.3s ease;
+   overflow-y: hidden;
 
    @media screen and (max-width: 800px) {
       width: 80px;
@@ -27,6 +28,10 @@
    margin-right: 15px;
    border: 3px solid rgb(230, 109, 109);
    font-size:1.6rem;
+
+   @media screen and (max-width: 800px) {
+      margin-left: 9px;
+   }
  }
 
  .rond-small {
@@ -63,24 +68,16 @@
    padding-left: 37px;
 }
 
-.item-nav{
-   margin: 20px 0px;
-}
-
 .menu a {
-
+   padding: 18px 0px 18px 19px;
    text-decoration: none;
    color: var(--text_grey);
    transition: .3s;
-
+   margin-bottom: 18px;
    width: fit-content;
    min-width: 195px;
    border-radius: 7px;
    font-size: var(--Xlittle);
-
-   i{
-
-   }
 
    @media screen and (max-width: 800px) {
       min-width: 75px;
@@ -91,7 +88,7 @@
       background-color: rgba(var(--purple), 0.05);
 
       @media screen and (max-width: 800px) {
-         max-width: 75px;
+         min-width: 75px;
          max-height: 58px;
       }
    }
@@ -103,7 +100,7 @@
    position:relative;
    font-size: var(--Xlittle);
    @media screen and (max-width: 800px) {
-      max-width: 10px;
+
    }
 
 
@@ -127,7 +124,7 @@
    margin-bottom: 20px;   
 
    @media screen and (max-width: 800px) {
-      width: 0px;
+      display: none;
    }
 }
 
@@ -142,6 +139,26 @@
 
    @media screen and (max-width: 800px) {
       padding-left: 0px;
+   }
+}
+
+.bottom-link{
+   padding: 10px 0px;
+   position: relative;
+   margin-bottom: 8px;
+
+   @media screen and (max-width: 800px) {
+
+   }
+
+   a{
+      @media screen and (max-width: 800px) {
+         opacity: 0;
+         position: absolute;
+         top: -20px;
+         left: -30px;
+         font-size: 0.8rem !important;
+      }
    }
 }
 
@@ -189,7 +206,7 @@
    background-color:rgb(var(--purple)); 
    position:absolute; 
    top:0; 
-   left:-18px; 
+   left:-54px; 
    border-radius: 4px; 
    transition: all 0.3s ease;
 
