--- a/app/views/layouts/tabs/tab_links/_home_active.html.erb
+++ b/app/views/layouts/tabs/tab_links/_home_active.html.erb
@@ -1,7 +1,4 @@
-
-
-<div class="item-nav">
-   <i class='fa-solid fa-home'></i>  
-   <%= link_to 'Accueil', user_path(current_user), 'aria-selected' => true %>
-</div>
-         <%= render "layouts/tabs/span_indicator" %>
+<%= link_to user_path(current_user), 'aria-selected' => true do %>
+   <i class='fa-solid fa-home'></i> Accueil 
+   <%= render "layouts/tabs/span_indicator" %>
+ <% end%>
