LL fixing create.js and edit_form for performances

--- a/app/views/sport_users/create.js.erb
+++ b/app/views/sport_users/create.js.erb
@@ -1,18 +1,1 @@
-var tab = document.querySelector(".tab-active");
-
-tab.innerHTML="";
-
-switch(tab.id){
-    case "Climbing":
-    tab.insertAdjacentHTML("beforeend", "<%= j render 'users/performances/climbing_edit_form', user: current_user %>")
-    break;
-    case "Tennis":
-    tab.insertAdjacentHTML("beforeend", "<%= j render 'users/performances/tennis_edit_form', user: current_user %>")
-    break;
-    case "Running":
-    tab.insertAdjacentHTML("beforeend", "<%= j render 'users/performances/running_edit_form', user: current_user %>")
-    break;
-    case "Workout":
-    tab.insertAdjacentHTML("beforeend", "<%= j render 'users/performances/workout_edit_form', user: current_user %>")
-    
-}
+document.getElementById('<%=@sport.name%>').innerHTML = '<%= j render partial: @url %>';
