--- a/app/views/users/performances/_running_edit_form.html.erb
+++ b/app/views/users/performances/_running_edit_form.html.erb
@@ -1,3 +1,4 @@
+<% if current_user.get_sport_user("Running")%>
 <div class="flex-row-between-flex-start">
     <%=form_for :running_performances, url: running_performances_path, method: :post do |f|%>
     <div class="container">
@@ -5,8 +6,8 @@
       <div class="input col-sm">
         <p class="input-name">Experience (années)</p>
         <div class="input-wrapper">
-          <% if user.get_sport_user("Running") %>
-              <%= f.number_field :experience, value:user.get_sport_user("Running").experience ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
+          <% if @user.get_sport_user("Running") %>
+              <%= f.number_field :experience, value: @user.get_sport_user("Running").experience ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
             <%else%>
               <%= f.number_field :experience ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
             <%end%> 
@@ -17,8 +18,8 @@
       <div class="input col-sm">
         <p class="input-name">Frequence (par semaine)</p>
         <div class="input-wrapper">
-          <% if user.get_sport_user("Running") %>
-              <%= f.number_field :frequency, value:user.get_sport_user("Running").frequency ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
+          <% if @user.get_sport_user("Running") %>
+              <%= f.number_field :frequency, value: @user.get_sport_user("Running").frequency ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
             <%else%>
               <%= f.number_field :frequency ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
             <%end%> 
@@ -29,8 +30,8 @@
       <div class="input col-sm">
         <p class="input-name">Vitesse</p>
         <div class="input-wrapper">
-        <%if user.last_running_perf%>
-            <%= f.number_field :speed, value:user.last_running_perf.speed ,placeholder: "Rentrez votre vitesse" %>
+        <%if @user.last_running_perf%>
+            <%= f.number_field :speed, value: @user.last_running_perf.speed ,placeholder: "Rentrez votre vitesse" %>
           <%else%>
             <%= f.number_field :speed,placeholder: "Rentrez votre vitesse" %>
           <%end%>
@@ -41,8 +42,8 @@
       <div class="input col-sm">
         <p class="input-name">Distance</p>
         <div class="input-wrapper">
-          <%if user.last_running_perf%>
-            <%= f.number_field :distance, value:user.last_running_perf.distance ,placeholder: "Rentrez votre vitesse" %>
+          <%if @user.last_running_perf%>
+            <%= f.number_field :distance, value: @user.last_running_perf.distance ,placeholder: "Rentrez votre vitesse" %>
           <%else%>
             <%= f.number_field :distance,placeholder: "Rentrez votre vitesse" %>
           <%end%>
@@ -55,10 +56,12 @@
       <div class="input">
       <div class="actions" style="margin:15px 0px 0px 13px">
         <%= f.submit('Sauvegarder') %>
-        <%= link_to "Arreter ce sport", sport_user_path(user.get_sport_user("Running")), method: :delete, class:"button delete-btn", data: { confirm: '"Toutes tes performances seront effacées, es tu sur ?'}%>
+        <%= link_to "Arreter ce sport", sport_user_path( @user.get_sport_user("Running")), method: :delete, class:"button delete-btn", data: { confirm: '"Toutes tes performances seront effacées, es tu sur ?'}%>
       </div>
       </div>
     <%end%>
 
     <div > <%= image_tag "running.png" %> </div>
 </div>
+
+<%end%>
