responsive dashboard home finish

--- a/app/assets/stylesheets/pages/events.scss
+++ b/app/assets/stylesheets/pages/events.scss
@@ -19,6 +19,9 @@
    @media screen and (max-width: 1350px) {
       width: 400px;
    }
+   @media screen and (max-width: 800px) {
+      width: 330px;
+   }
 
 
 }
