--- a/app/assets/stylesheets/pages/user/edit.scss
+++ b/app/assets/stylesheets/pages/user/edit.scss
@@ -12,8 +12,9 @@
   justify-content: space-between;
   align-items: center;
 
-  @media screen and (max-width: 900px) {
-
+  @media screen and (max-width: 800px) {
+    flex-wrap: wrap;
+    gap:17px
  }
 
   
