--- a/app/assets/stylesheets/pages/sign_up_log_in-page/password_forgot.css
+++ b/app/assets/stylesheets/pages/sign_up_log_in-page/password_forgot.css
@@ -5,22 +5,23 @@
 .width-lign {
   width: 260px !important;
 }
-/*# sourceMappingURL=password_forgot.css.map */
 
 @media screen and (max-width: 1200px) {
-  .form-container{
-    flex-direction: column !important;
+  .form-container {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
     position: relative !important;
   }
-  
-  .password-img{
+  .password-img {
     background-position: 25% 60% !important;
   }
-
 }
 
-@media screen and(max-width: 500px) {
-  .right-content{
+@media screen and (max-width: 500px) {
+  .right-content {
     position: fixed;
   }
 }
+/*# sourceMappingURL=password_forgot.css.map */
