--- a/app/assets/stylesheets/pages/sign_up_log_in-page/password_forgot.scss
+++ b/app/assets/stylesheets/pages/sign_up_log_in-page/password_forgot.scss
@@ -5,3 +5,22 @@
 .width-lign{
    width: 260px !important;
 }
+
+@media screen and (max-width: 1200px) {
+   .form-container{
+     flex-direction: column !important;
+     position: relative !important;
+   }
+   
+   .password-img{
+     background-position: 25% 60% !important;
+   }
+ 
+ }
+ 
+ @media screen and(max-width: 500px) {
+   .right-content{
+     position: fixed;
+   }
+ }
+ 
