--- a/app/assets/stylesheets/pages/landing-page/footer.css
+++ b/app/assets/stylesheets/pages/landing-page/footer.css
@@ -49,4 +49,44 @@
   font-style: var(--medium-font);
   color: var(--text-grey);
 }
+
+@media screen and (max-width: 1600px) {
+  .footer-lp {
+    position: relative;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .footer-lp {
+    position: relative;
+  }
+  .cowl {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .footer-lp {
+    position: relative;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: auto;
+  }
+  .cowl {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 10px;
+  }
+}
 /*# sourceMappingURL=footer.css.map */
