--- a/app/assets/stylesheets/pages/landing-page/sports.css
+++ b/app/assets/stylesheets/pages/landing-page/sports.css
@@ -29,9 +29,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
@@ -49,6 +49,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -132,5 +134,11 @@
 
 .cart-contain .cart .text-cart {
   padding-top: 15px;
+}
+
+@media screen and (max-width: 900px) {
+  .cart-contain {
+    border: none;
+  }
 }
 /*# sourceMappingURL=sports.css.map */
