--- a/app/assets/stylesheets/pages/landing-page/testimonies.css
+++ b/app/assets/stylesheets/pages/landing-page/testimonies.css
@@ -23,6 +23,14 @@
 
 .image-container {
   height: 1000px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
 }
 
 .cardy {
@@ -79,32 +87,129 @@
 }
 
 .cardy-1 {
-  position: relative;
-  bottom: 850px;
-  right: 240px;
+  position: absolute;
+  top: 70px;
+  left: -200px;
 }
 
 .cardy-2 {
-  position: relative;
-  bottom: 1100px;
+  position: absolute;
+  top: 70px;
   left: 720px;
 }
 
 .cardy-3 {
-  position: relative;
-  bottom: 870px;
-  right: 350px;
+  position: absolute;
+  bottom: 350px;
+  left: -300px;
 }
 
 .cardy-4 {
-  position: relative;
-  bottom: 1100px;
-  left: 700px;
+  position: absolute;
+  bottom: 350px;
+  right: -300px;
 }
 
 .cardy-5 {
-  position: relative;
-  bottom: 900px;
+  position: absolute;
+  bottom: 100px;
   left: 200px;
+}
+
+@media screen and (max-width: 1600px) {
+  .image-container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .cardy-1 {
+    position: absolute;
+    left: -100px;
+    opacity: 0.96;
+  }
+  .cardy-2 {
+    position: absolute;
+    left: 500px;
+    opacity: 0.96;
+  }
+  .cardy-3 {
+    position: absolute;
+    left: -90px;
+    opacity: 0.96;
+  }
+  .cardy-4 {
+    position: absolute;
+    left: 450px;
+    opacity: 0.96;
+  }
+  .cardy-5 {
+    opacity: 0.99;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .image-container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .cardy-1 {
+    position: absolute;
+    right: 100px;
+    opacity: 0.96;
+  }
+  .cardy-2 {
+    position: absolute;
+    left: 500px;
+    opacity: 0.96;
+  }
+  .cardy-3 {
+    position: absolute;
+    left: -90px;
+    opacity: 0.96;
+  }
+  .cardy-4 {
+    position: absolute;
+    left: 450px;
+    opacity: 0.96;
+  }
+  .cardy-5 {
+    opacity: 0.99;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .back-img {
+    position: absolute;
+    right: 40px;
+    max-width: 600px;
+  }
+  .cardy-1 {
+    position: relative;
+    top: -100px;
+    left: 5px;
+  }
+  .cardy-2 {
+    position: relative;
+    top: 200px;
+    left: 5px;
+  }
+  .cardy-3 {
+    position: relative;
+    top: -260px;
+    left: 5px;
+  }
+  .cardy-4 {
+    display: none;
+  }
+  .cardy-5 {
+    display: none;
+  }
 }
 /*# sourceMappingURL=testimonies.css.map */
