--- a/app/views/users/performances/_workout_perf.html.erb
+++ b/app/views/users/performances/_workout_perf.html.erb
@@ -1,5 +1,5 @@
 <%if user.last_workout_perf %>
-<p>Il fait du workout</p>
+<p>Il fait de la Musculation</p>
 <ul>
   <li> Experience : <%= user.workout_exp%> ans </li>
   <li> Frequence : <%= user.workout_freq %> seances par semaines </li>
