LL email sending from landing page

--- a/app/views/static_pages/_contact_lp.html.erb
+++ b/app/views/static_pages/_contact_lp.html.erb
@@ -9,16 +9,19 @@
     </div>
 
    <div class="element-contain">
+   
       <div class="container-left">
          <div class="img-left"></div>
       </div>
 
       <div class="container-right">
-      <form>
+      <%# <form> %>
+      <%= form_tag(team_index_path, :method => "post") do %>
     <div class="input">
       <p class="input-name">Email</p>
       <div class="input-wrapper">
-      <input type="email" placeholder="Email Address" />
+      <%= email_field_tag :contact_email, params[:contact_email], placeholder: "Ton email" %>
+      <%# <input id="contact-email" type="email" name="contact-email" placeholder="Email Address" /> %>
       <i class="fa-solid fa-envelope"></i>
       </div>
     </div>
@@ -26,17 +29,23 @@
     <div class="input">
       <p class="input-name">Message</p>
       <div class="input-wrapper">
-         <textarea type="text" placeholder="Message"></textarea>
+         <%# <textarea type="text" name="contact-message" id="contact-message" placeholder="Message"></textarea> %>
+         <%= text_field_tag :contact_message, params[:contact_message], placeholder: "Ton message" %>
          <i class="fa-solid fa-comment"></i>
       </div>
     </div>
 
+   <%# <%=link_to "ceci est mon formulaire", team_index_path, method: :post%> %>
+
     <div class="input">
       <div class="action">
-      <button class="button primary" type="submit">Envoyer</button>
+      <%# <button class="button primary" type="submit">Envoyer</button> %>
       </div>
     </div>
-         </form>
+    <%= submit_tag "Envoyer", :name => nil %>
+    <% end %>
+    
+         <%# </form> %>
       </div>
    </div>  
 </div>
