--- a/app/views/events/_show_title.html.erb
+++ b/app/views/events/_show_title.html.erb
@@ -1,6 +1,6 @@
 <div class="top-element">
         <div class="twins">
-          <h1 class="title"> <strong>Title: </strong><%= @event.title %></h1>
+          <h1 class="title"> <strong>Titre: </strong><%= @event.title %></h1>
           <div class="title-lign"></div>
         </div>  
 </div>
