--- a/app/views/events/_form_edit.html.erb
+++ b/app/views/events/_form_edit.html.erb
@@ -86,8 +86,8 @@
           </div> 
         </div>  
           <div class="under-button-event under-button">
-              <%= link_to 'Back', events_path %> 
-             |<%= link_to 'Show', @event %> 
+              <%= link_to 'Retour', events_path %> 
+             |<%= link_to 'Voir', @event %> 
           </div> 
             <div><%=link_to "Annuler l'evenement", event_path(@event), class: 'button delete-btn', method: :delete, data: { confirm: 'Vous allez annuler cet evenement, êtes-vous sûr ?'}%></div>
        </div>  
