--- a/app/views/events/_show_info.html.erb
+++ b/app/views/events/_show_info.html.erb
@@ -43,6 +43,6 @@
     </div>
 
     <div class="button-row">
-      <%= link_to 'Edit', edit_event_path(@event) %> |
+      <%= link_to 'Editer', edit_event_path(@event) %> |
       <%= link_to 'Back', events_path%>
     </div>  
