--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-dashboard">
     <div class="edit-profil-btn">
       <h1> Événements 📆</h1> 
-      <%= link_to 'Crée un event', new_event_path, class:'button primary' %>
+      <%= link_to 'Crée un événement', new_event_path, class:'button primary' %>
     </div>
 
    <div class="card">
